Updaed the share modal so that it is now correctly styled on mobile

--- a/app/assets/stylesheets/shopping_spree.scss
+++ b/app/assets/stylesheets/shopping_spree.scss
@@ -41,6 +41,12 @@ $chat_bar_height: 55px;
         align-items: center;
         justify-content: center;
     }
+
+    .no-horizontal-padding
+    {
+        padding-left: 0;
+        padding-right: 0;
+    }
     
 }
 
