--- a/app/assets/stylesheets/shopping_spree_share_modal.scss
+++ b/app/assets/stylesheets/shopping_spree_share_modal.scss
@@ -22,4 +22,25 @@
     position: fixed;
     background-color: #f6f5f3;
     z-index: 1000;
+
+    .modal-headline
+    {
+        font-size: 22px;
+        font-weight: lighter;
+        margin-top: 10%;
+        margin-bottom: 10px;
+    }
+
+    #start-button
+    {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    .btn
+    {
+        font-weight: lighter;
+        text-transform: none;
+        border-bottom: 0px;
+    }
 }
